--- a/css/style.css
+++ b/css/style.css
@@ -8,122 +8,5 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 
 body 
 {
-	/*background-image: url('../images/background.jpg');*/
-	/*font-family: 'Open Sans', sans-serif;*/
-	font-family: 'Muli', sans-serif;
-
-}
-
-.container_header, .container_body, .container_footer
-{
-	width: 100%;
-}
-
-.bg_image
-{
-    background: url(../images/bg.jpg) no-repeat fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-.container_full
-{
-    padding: 1%;
-    background-color: rgba(25, 25, 25, 0.8);
-}
-
-.container_header
-{
-    display: block;
-    margin: 0 auto;
-    background-color: rgba(25, 25, 25, 0.4);
-    overflow: hidden;
-}
-
-.container_header .header
-{
-    max-width: 90%;
-    width: 90%;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.container_header .logo
-{
-    padding: 1% 0 0 0;
-}
-
-.container_header .menu
-{
-    padding: 1% 0 0 0;
-}
-
-
-.container_header .logo a
-{
-    color: white;
-    text-decoration: none;
-    font-size: 245%;
-    font-weight: bold;
-}
-
-.container_header .pic_logo
-{
-	background: url(../images/logo.png) no-repeat scroll 0 0 transparent;
-    background-size: 100% 100%;
-    padding: 5% 5% 5% 5%;
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1%;
-}
-
-
-
-.container_header .menu ul 
-{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.container_header .menu li
-{
-    display: inline-block;
-    list-style: none;
-    margin: 1%;
-    margin-right: 5%;
-}
-
-.container_header .menu li a
-{
-	display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 5px;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.container_header .menu li a:hover
-{
-    background-color: #111;
-    cursor: pointer;
-}
-
-.container_body
-{
-    padding: 50% 0% 0% 0%;
-    background-color: rgba(255, 255, 255, 0.85);
-}
-
-.container_footer
-{
-    padding: 5% 0% 0% 0%;
-    background-color: rgba(189, 189, 189, 0.75);
+	font-family: sans-serif;
 }
